// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`numeric_big.sql > line 6 1`] = `
[
  "DROP TABLE num_data",
  {
    "stmts": [
      {
        "stmt": {
          "DropStmt": {
            "behavior": "DROP_RESTRICT",
            "objects": [
              {
                "List": {
                  "items": [
                    {
                      "String": {
                        "sval": "num_data",
                      },
                    },
                  ],
                },
              },
            ],
            "removeType": "OBJECT_TABLE",
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`numeric_big.sql > line 17 1`] = `
[
  "CREATE TABLE num_data (id int4, val numeric(1000,800))",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "num_data",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id",
                  "is_local": true,
                  "location": 23,
                  "typeName": {
                    "location": 26,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "val",
                  "is_local": true,
                  "location": 32,
                  "typeName": {
                    "location": 36,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "numeric",
                        },
                      },
                    ],
                    "typemod": -1,
                    "typmods": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1000,
                          },
                          "location": 44,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 800,
                          },
                          "location": 49,
                        },
                      },
                    ],
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`numeric_big.sql > line 27 1`] = `
[
  "CREATE TABLE num_result (id1 int4, id2 int4, result numeric(1000,800))",
  {
    "stmts": [
      {
        "stmt": {
          "CreateStmt": {
            "oncommit": "ONCOMMIT_NOOP",
            "relation": {
              "inh": true,
              "location": 13,
              "relname": "num_result",
              "relpersistence": "p",
            },
            "tableElts": [
              {
                "ColumnDef": {
                  "colname": "id1",
                  "is_local": true,
                  "location": 25,
                  "typeName": {
                    "location": 29,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "id2",
                  "is_local": true,
                  "location": 35,
                  "typeName": {
                    "location": 39,
                    "names": [
                      {
                        "String": {
                          "sval": "int4",
                        },
                      },
                    ],
                    "typemod": -1,
                  },
                },
              },
              {
                "ColumnDef": {
                  "colname": "result",
                  "is_local": true,
                  "location": 45,
                  "typeName": {
                    "location": 52,
                    "names": [
                      {
                        "String": {
                          "sval": "pg_catalog",
                        },
                      },
                      {
                        "String": {
                          "sval": "numeric",
                        },
                      },
                    ],
                    "typemod": -1,
                    "typmods": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1000,
                          },
                          "location": 60,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 800,
                          },
                          "location": 65,
                        },
                      },
                    ],
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`numeric_big.sql > line 511 1`] = `
[
  "VACUUM ANALYZE num_exp_add",
  {
    "stmts": [
      {
        "stmt": {
          "VacuumStmt": {
            "is_vacuumcmd": true,
            "options": [
              {
                "DefElem": {
                  "defaction": "DEFELEM_UNSPEC",
                  "defname": "analyze",
                  "location": 7,
                },
              },
            ],
            "rels": [
              {
                "VacuumRelation": {
                  "relation": {
                    "inh": true,
                    "location": 15,
                    "relname": "num_exp_add",
                    "relpersistence": "p",
                  },
                },
              },
            ],
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`numeric_big.sql > line 527 1`] = `
[
  "DELETE FROM num_result",
  {
    "stmts": [
      {
        "stmt": {
          "DeleteStmt": {
            "relation": {
              "inh": true,
              "location": 12,
              "relname": "num_result",
              "relpersistence": "p",
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;

exports[`numeric_big.sql > line 1215 1`] = `
[
  "WITH t(x) AS (SELECT '1e-'||n FROM generate_series(1, 100) g(n))
SELECT x, log(x::numeric) FROM t",
  {
    "stmts": [
      {
        "stmt": {
          "SelectStmt": {
            "fromClause": [
              {
                "RangeVar": {
                  "inh": true,
                  "location": 96,
                  "relname": "t",
                  "relpersistence": "p",
                },
              },
            ],
            "limitOption": "LIMIT_OPTION_DEFAULT",
            "op": "SETOP_NONE",
            "targetList": [
              {
                "ResTarget": {
                  "location": 72,
                  "val": {
                    "ColumnRef": {
                      "fields": [
                        {
                          "String": {
                            "sval": "x",
                          },
                        },
                      ],
                      "location": 72,
                    },
                  },
                },
              },
              {
                "ResTarget": {
                  "location": 75,
                  "val": {
                    "FuncCall": {
                      "args": [
                        {
                          "TypeCast": {
                            "arg": {
                              "ColumnRef": {
                                "fields": [
                                  {
                                    "String": {
                                      "sval": "x",
                                    },
                                  },
                                ],
                                "location": 79,
                              },
                            },
                            "location": 80,
                            "typeName": {
                              "location": 82,
                              "names": [
                                {
                                  "String": {
                                    "sval": "pg_catalog",
                                  },
                                },
                                {
                                  "String": {
                                    "sval": "numeric",
                                  },
                                },
                              ],
                              "typemod": -1,
                            },
                          },
                        },
                      ],
                      "funcformat": "COERCE_EXPLICIT_CALL",
                      "funcname": [
                        {
                          "String": {
                            "sval": "log",
                          },
                        },
                      ],
                      "location": 75,
                    },
                  },
                },
              },
            ],
            "withClause": {
              "ctes": [
                {
                  "CommonTableExpr": {
                    "aliascolnames": [
                      {
                        "String": {
                          "sval": "x",
                        },
                      },
                    ],
                    "ctematerialized": "CTEMaterializeDefault",
                    "ctename": "t",
                    "ctequery": {
                      "SelectStmt": {
                        "fromClause": [
                          {
                            "RangeFunction": {
                              "alias": {
                                "aliasname": "g",
                                "colnames": [
                                  {
                                    "String": {
                                      "sval": "n",
                                    },
                                  },
                                ],
                              },
                              "functions": [
                                {
                                  "List": {
                                    "items": [
                                      {
                                        "FuncCall": {
                                          "args": [
                                            {
                                              "A_Const": {
                                                "ival": {
                                                  "ival": 1,
                                                },
                                                "location": 51,
                                              },
                                            },
                                            {
                                              "A_Const": {
                                                "ival": {
                                                  "ival": 100,
                                                },
                                                "location": 54,
                                              },
                                            },
                                          ],
                                          "funcformat": "COERCE_EXPLICIT_CALL",
                                          "funcname": [
                                            {
                                              "String": {
                                                "sval": "generate_series",
                                              },
                                            },
                                          ],
                                          "location": 35,
                                        },
                                      },
                                      {},
                                    ],
                                  },
                                },
                              ],
                            },
                          },
                        ],
                        "limitOption": "LIMIT_OPTION_DEFAULT",
                        "op": "SETOP_NONE",
                        "targetList": [
                          {
                            "ResTarget": {
                              "location": 21,
                              "val": {
                                "A_Expr": {
                                  "kind": "AEXPR_OP",
                                  "lexpr": {
                                    "A_Const": {
                                      "location": 21,
                                      "sval": {
                                        "sval": "1e-",
                                      },
                                    },
                                  },
                                  "location": 26,
                                  "name": [
                                    {
                                      "String": {
                                        "sval": "||",
                                      },
                                    },
                                  ],
                                  "rexpr": {
                                    "ColumnRef": {
                                      "fields": [
                                        {
                                          "String": {
                                            "sval": "n",
                                          },
                                        },
                                      ],
                                      "location": 28,
                                    },
                                  },
                                },
                              },
                            },
                          },
                        ],
                      },
                    },
                    "location": 5,
                  },
                },
              ],
            },
          },
        },
      },
    ],
    "version": 160001,
  },
]
`;
